NetBSD Problem Report #50926

From www@NetBSD.org  Wed Mar  9 12:36:03 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id BD62D7ABD8
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  9 Mar 2016 12:36:03 +0000 (UTC)
Message-Id: <20160309123602.AB6A47ACC3@mollari.NetBSD.org>
Date: Wed,  9 Mar 2016 12:36:02 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/ic/arn5008.c:2023]: (style) Suspicious condition
X-Send-Pr-Version: www-1.0

>Number:         50926
>Category:       kern
>Synopsis:       src/sys/dev/ic/arn5008.c:2023]: (style) Suspicious condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 09 12:40:00 +0000 2016
>Closed-Date:    Wed Mar 09 20:37:12 +0000 2016
>Last-Modified:  Wed Mar 09 20:37:12 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160308
>Organization:
>Environment:
>Description:
src/sys/dev/ic/arn5008.c:2023]: (style) Suspicious condition (assignment + comparison); Clarify expression with parentheses.


Source code is

       if ((iq_corr_neg = cal->iq_corr_meas < 0))

That could be tidier.


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50926 CVS commit: src/sys/dev/ic
Date: Wed, 9 Mar 2016 15:06:32 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar  9 20:06:31 UTC 2016

 Modified Files:
 	src/sys/dev/ic: arn5008.c

 Log Message:
 PR/50926: David Binderman: Fix wrong paren


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/sys/dev/ic/arn5008.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 09 Mar 2016 20:37:12 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.